solved visual issue with desktop having image too big

--- a/public/secondPage.css
+++ b/public/secondPage.css
@@ -13,7 +13,7 @@
 
 img#drink{
     border: purple 3px groove;
-    max-width: 100%;
+    max-width: 350px;
 }
 
 div.extended{
